--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ aside {
   width: 400px;
   background-color: white;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
 main {
   background-color: whitesmoke;
   width: 100%;
