--- a/customer-style.css
+++ b/customer-style.css
@@ -41,9 +41,11 @@ li:last-child {
 li:hover {
   background-color: aqua;
   cursor: pointer;
+  border-radius: 30px;
 }
 .active {
   background-color: aqua;
+  border-radius: 30px;
 }
 .container2 {
   display: flex;
@@ -78,4 +80,8 @@ h1 {
 }
 #checkoutButton {
   margin-top: 20px;
+}
+#checkoutButton:hover {
+  background-color: aqua;
+  border-radius: 30px;
 }
