edit some style

--- a/customer-style.css
+++ b/customer-style.css
@@ -57,6 +57,8 @@ h1 {
 .cards {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .card {
   width: 200px;
