--- a/customer-style.css
+++ b/customer-style.css
@@ -20,6 +20,9 @@ main {
   background-color: whitesmoke;
   width: 100%;
   padding: 20px;
+  background-size: cover;
+  background-position: right center; 
+  background-image: url("ecomer.jpg");
 }
 .profile-container {
   display: flex;
@@ -41,11 +44,9 @@ li:last-child {
 li:hover {
   background-color: aqua;
   cursor: pointer;
-  border-radius: 30px;
 }
 .active {
   background-color: aqua;
-  border-radius: 30px;
 }
 .container2 {
   display: flex;
@@ -82,6 +83,10 @@ h1 {
   margin-top: 20px;
 }
 #checkoutButton:hover {
+  background-color: aqua;
+  border-radius: 30px;
+}
+input:hover {
   background-color: aqua;
   border-radius: 30px;
 }
